@@ -1,3 +1,10 @@
+2008-05-12  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* utils.c (display_calendar): Added a -1 when set the month on the
+	GtkCalendar, this sinces GtkCalendar set the months from 0 to 11
+	and GDate set them from 1 to 12 and left 0 for a bad month. Also
+	add  valid date check.
+
 2008-05-06  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* compras.c: (check_regexp): Drop function. It should't ever be here.
